melhorias na interface
adição de background
alteração de fonte
alteração de conteúdo do botão "sobre a banda"

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="hero-content">
             <h1>LED ZEPPELIN</h1>
             <p>Uma das maiores bandas de rock de todos os tempos</p>
-            <a href="#about" class="btn">Conheça a história</a>
+            <a href="#about" class="btn">Sobre a Banda</a>
         </div>
         <div class="hero-image">
             <img src="images/fullband2.jpg" alt="Led Zeppelin">
@@ -111,7 +111,7 @@
 
     <section id="legacy" class="legacy fade-in">
         <div class="container">
-            <h2>Legado</h2>
+            <h2>Acervo</h2>
             <p>O Led Zeppelin deixou um legado indelével na história da música. Sua influência se estende por diversos gêneros, do hard rock ao heavy metal, do blues rock ao folk rock. A banda foi incluída no Rock and Roll Hall of Fame em 1995.</p>
             <p>Após a trágica morte de John Bonham em 1980, a banda decidiu se separar, afirmando que não poderiam continuar sem seu baterista. Apesar disso, seu legado continua vivo através de sua música, que segue inspirando novas gerações de músicos e fãs em todo o mundo.</p>
             <div class="albums">
@@ -131,17 +131,6 @@
         </div>
     </section>
 
-
-    <footer>
-        <div class="footer-content">
-            <p>Página criada por Luciano Beltrão, aluno de ADS (5 Período) da Undb.</p>
-            <div class="social-links">
-                <a href="https://github.com/lucbeltrao" target="_blank" class="social-icon">
-                    <i class="fab fa-github"></i>
-                </a>
-            </div>
-        </div>
-    </footer>
 
     <script src="script.js"></script>
 </body>
